# document-intelligence-assistant

./: .dockerignore  .env.example  .gitignore  DATA_GENERATION.md  Dockerfile  EVAL.md  HANDOFF.md  Makefile  README.md  docker-compose.yml  eval.md  evaluation_set.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.planning/: NEXT-SESSION.md  v6-plan.md  v7-plan.md
.planning/archive/: stack-d-migration.md
data/golden/: qa_en.yaml  qa_id.yaml
data/seed/: README.md  hr_policy_acme.md  kontrak_vendor_pelangi.txt  memo_internal_q1.md
docker/: entrypoint.sh
docs/: 2026-landscape.md  ASSIGNMENT.md  CORPUS.md  RUNBOOK.md  architecture.md  bahasa-eval.md  conflict-graph.mmd  design-decisions.md  proposal-rubric.md
docs/explorations/: EXPLORATIONS.md
docs/explorations/ts-archive/: README.md
docs/explorations/ts-archive/pi-extension/: package.json
docs/explorations/ts-archive/pi-extension/src/: index.ts
docs/integrations/: gws-mcp.md
experimental/: README.md  background.py  package.json  pagerank.py  pnpm-workspace.yaml
frontend/: streamlit_app.py
klerk-cli/: package.json  tsconfig.json
klerk-cli/src/: index.ts
klerk-cli/src/chat/: pi-runtime.ts
pi-extension-klerk/: README.md  tsconfig.json
pi-extension-klerk/src/: index.ts
scripts/: setup-local-llm.sh
src/klerk/: __init__.py  __main__.py  paths.py
src/klerk/agent/: _models.py  action_items.py  anomaly.py  checkpoint.py  contradiction.py  crag.py  doc_writer.py  doc_writer_graph.py  drift.py  escalation.py  faq.py  kg_extract.py  kg_viz.py  llm_json.py  orchestrator.py  pai.py  proposal_pipeline.py  schemas.py  tools.py  writer.py
src/klerk/agent/prompts/: system.py
src/klerk/agent/skills/: __init__.py  action_items.yaml  conflict_report.yaml  draft_doc.yaml  drift.yaml  escalation.yaml  writer.yaml
src/klerk/api/: ingest_runner.py  models.py  server.py  session.py
src/klerk/cli/: _agent_flag.py  ask_cmd.py  contradict_cmd.py  drive_cmd.py  escalate_cmd.py  eval_cmd.py  extract_actions_cmd.py  faq_cmd.py  index_cmd.py  kg_cmd.py  main.py  memory_cmd.py  parse_cmd.py  propose_cmd.py  search_cmd.py  should_cmds.py  synth_cmd.py  write_cmd.py
src/klerk/drive/: sync.py
src/klerk/eval/: golden.py  ragas_runner.py  rubric.py  seahelm_runner.py
src/klerk/llm/: cache.py  nemotron.py  router.py
src/klerk/mcp/: server.py
src/klerk/memory/: __init__.py  store.py
src/klerk/obs/: phoenix.py
src/klerk/orchestrate/: conflict_graph.py
src/klerk/parse/: __init__.py  unified.py
src/klerk/rag/: chunker.py  embed.py  fusion.py  rerank.py  retrieve.py  store.py
src/klerk/scheduled/: drift_runner.py
src/klerk/studio/: app.py  splash.py  theme.py
src/klerk/studio/widgets/: __init__.py  activity.py  eval_panel.py  files.py  graph.py  kg_snapshot.py  live_chat.py  status_bar.py  traces.py
src/klerk/synth/: gen.py  specs.py
tests/: test_agent_mode.py  test_agentic.py  test_api_endpoints.py  test_chunker.py  test_conflict_graph.py  test_doc_writer.py  test_drive_sync.py  test_embed_remote.py  test_eval_loader.py  test_fusion.py  test_imports.py  test_memory.py  test_nemotron_config.py  test_orchestrator.py  test_pai_migration.py  test_paths.py  test_rerank_colbert.py  test_schemas.py  test_session_store.py  test_studio.py  test_synth_gen.py
