[project]
name = "klerk"
version = "0.0.1"
description = "Document Intelligence Assistant — hybrid retrieval via BGE-M3 multi-head (dense + sparse + ColBERT) over LanceDB + Tantivy, LangGraph for conflict orchestration, served via FastAPI against Nemotron through a Cloudflare-tunneled LiteLLM proxy."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "yohn-maistre" }]
license = { text = "MIT" }
keywords = ["rag", "agents", "document-intelligence", "nemotron", "mcp", "bahasa"]

dependencies = [
    # LLM gateway + caching
    "litellm>=1.50.0",
    "diskcache>=5.6.3",
    "pydantic-ai>=1.0",
    "pydantic>=2.9",

    # Retrieval stack — vector + lexical store. The heavy local embedder/reranker
    # (BGE-M3 via FlagEmbedding + torch + transformers) lives in the `local`
    # extra so a lite install (remote embeddings) stays small. All heavy imports
    # are lazy + gated, so the base install runs the remote/mock backends fine.
    "lancedb>=0.13.0",
    "tantivy>=0.22.0",

    # Knowledge graph
    "networkx>=3.3",

    # Parsing — PyMuPDF is the lightweight base parser (lite). Layout-aware
    # Docling (which pulls torch via docling-ibm-models) is in the `parse` extra.
    "pymupdf>=1.24.0",

    # Synthesis
    "reportlab>=4.2.0",
    "python-docx>=1.1.0",
    "faker>=30.0.0",

    # Drive (Service Account incremental sync)
    "google-api-python-client>=2.148.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.0",

    # Eval
    "ragas>=0.2.0",
    "datasets>=3.0.0",

    # Observability
    "arize-phoenix>=5.0.0",
    "openinference-instrumentation-litellm>=0.1.0",
    "opentelemetry-sdk>=1.27.0",

    # Orchestration (Conflict Reporter spine + chat orchestrator)
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",

    # CLI + Studio
    "typer>=0.12.5",
    "rich>=13.9.0",
    "textual>=0.86.0",

    # MCP
    "mcp>=1.0.0",

    # FastAPI (primary surface)
    "fastapi>=0.115.0",
    "sse-starlette>=2.1.3",
    "uvicorn>=0.32.0",

    # YAML for golden sets
    "pyyaml>=6.0.2",
]

[project.scripts]
klerk = "klerk.cli.main:app"
klerk-api = "klerk.api.server:main"
klerk-mcp = "klerk.mcp.server:main"
klerk-studio = "klerk.studio.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

# ─── Install-profile extras (LangFlow-style groupings) ───────────────────────
# These mirror the deployment surfaces in §5 of the v7 plan. The base
# `dependencies` list is the LITE runtime — no torch/FlagEmbedding — so a remote-
# embed install stays small enough for constrained devices (e.g. a phone under
# proot). Heavy local-inference deps live in `local`. All heavy imports are lazy
# + gated, so the base install runs the remote/mock backends without them.
#
#   pip install klerk            → lite: remote / mock embed backend (no torch)
#   pip install klerk[server]    → FastAPI + uvicorn + textual-serve surface
#   pip install klerk[local]     → local BGE-M3 weights (FlagEmbedding/torch)
#   pip install klerk[full]      → server + local (the docker-compose target)
#
# Tests run against the full surface: `uv sync --extra dev --extra full`.
# `lite` is an explicit empty marker so the lite profile is nameable.
lite = []
server = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sse-starlette>=2.1.3",
    # textual >=0.86 ships `textual serve`; textual-serve gives the standalone
    # browser server S4's Dockerfile installs to serve the Studio TUI.
    "textual-serve>=1.1.1",
]
local = [
    "FlagEmbedding>=1.2.10",
    "torch>=2.4.0",
    "transformers>=4.45.0",
]
# Layout-aware parsing (Docling). Heavy (pulls torch); the base PyMuPDF parser
# covers the lite path. Set KLERK_PARSER=pymupdf to force the light parser.
parse = ["docling>=2.5.0"]
full = ["klerk[server,local,parse]"]

# Drift agent (capability E) — scheduled nightly scan via APScheduler.
# Kept out of the default install so the base container stays lean.
scheduled = [
    "apscheduler>=3.10.4",
    "watchdog>=5.0.3",
]
# STRETCH note: textual >=0.86 supports `textual serve` for browser deploy
# of the Studio. No separate `textual-web` venv needed.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/klerk"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
