[project]
name = "klerk"
version = "0.0.1"
description = "Document Intelligence Assistant — hybrid retrieval via BGE-M3 multi-head (dense + sparse + ColBERT) over LanceDB + Tantivy, LangGraph for conflict orchestration, served via FastAPI against Nemotron through a Cloudflare-tunneled LiteLLM proxy."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "yohn-maistre" }]
license = { text = "MIT" }
keywords = ["rag", "agents", "document-intelligence", "nemotron", "mcp", "bahasa"]

dependencies = [
    # LLM gateway + caching
    "litellm>=1.50.0",
    "diskcache>=5.6.3",
    "pydantic-ai>=1.0",
    "pydantic>=2.9",

    # Retrieval store (vector + lexical). The heavy local embedder/reranker
    # (BGE-M3 via FlagEmbedding + torch) is the `local` extra; layout-aware
    # parsing (Docling) is `parse`. All heavy imports are lazy + gated, so the
    # base install runs the remote/mock embed backend + PyMuPDF parser fine.
    "lancedb>=0.13.0",
    "tantivy>=0.22.0",
    "pymupdf>=1.24.0",

    # Knowledge graph (pure-Python, lightweight)
    "networkx>=3.3",

    # Drive (Service Account incremental sync)
    "google-api-python-client>=2.148.0",
    "google-auth>=2.35.0",

    # Agent loop (LangGraph ReAct agent + typed tools)
    "langgraph>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-core>=0.3.0",

    # CLI + Studio TUI
    "typer>=0.12.5",
    "rich>=13.9.0",
    "textual>=0.86.0",

    # YAML for golden sets
    "pyyaml>=6.0.2",
]

[project.scripts]
klerk = "klerk.cli.main:app"
klerk-api = "klerk.api.server:main"
klerk-mcp = "klerk.mcp.server:main"
klerk-studio = "klerk.studio.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

# ─── Install-profile extras (LangFlow-style groupings) ───────────────────────
# The base `dependencies` list is the LITE runtime: the agent loop + retrieval +
# remote/mock embeddings + PyMuPDF + the TUI — small enough for constrained
# devices (a phone under proot). Everything heavy is opt-in. All heavy imports
# are lazy + gated, so the base install imports and runs without any extra.
#
#   pip install klerk            → lite: chat agent, remote/mock embed, no torch
#   pip install klerk[synth]     → corpus generator (reportlab + python-docx)
#   pip install klerk[server]    → FastAPI + uvicorn + textual-serve surface
#   pip install klerk[local]     → local BGE-M3 weights (FlagEmbedding/torch)
#   pip install klerk[parse]     → layout-aware Docling parsing (pulls torch)
#   pip install klerk[eval]      → RAGAS baseline (ragas + datasets)
#   pip install klerk[obs]       → Arize Phoenix observability
#   pip install klerk[mcp]       → klerk-as-MCP server
#   pip install klerk[full]      → everything (the docker-compose target)
#
# Phone pipeline = base + synth: `pip install -e .[synth]` covers
# `synth gen` -> `index build --src … ` (PyMuPDF) -> `eval run --no-do-ragas`.
# Tests run against the full surface: `uv sync --extra dev --extra full`.
lite = []
synth = ["reportlab>=4.2.0", "python-docx>=1.1.0"]
server = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sse-starlette>=2.1.3",
    # textual >=0.86 ships `textual serve`; textual-serve gives the standalone
    # browser server the Dockerfile installs to serve the Studio TUI.
    "textual-serve>=1.1.1",
]
local = [
    "FlagEmbedding>=1.2.10",
    "torch>=2.4.0",
    "transformers>=4.45.0",
]
# Layout-aware parsing (Docling). Heavy (pulls torch); the base PyMuPDF parser
# covers the lite path. Set KLERK_PARSER=pymupdf to force the light parser.
parse = ["docling>=2.5.0"]
eval = ["ragas>=0.2.0", "datasets>=3.0.0"]
obs = [
    "arize-phoenix>=5.0.0",
    "openinference-instrumentation-litellm>=0.1.0",
    "opentelemetry-sdk>=1.27.0",
]
mcp = ["mcp>=1.0.0"]
full = ["klerk[server,local,parse,synth,eval,obs,mcp]"]

# Drift agent (capability E) — scheduled nightly scan via APScheduler.
# Kept out of the default install so the base container stays lean.
scheduled = [
    "apscheduler>=3.10.4",
    "watchdog>=5.0.3",
]
# STRETCH note: textual >=0.86 supports `textual serve` for browser deploy
# of the Studio. No separate `textual-web` venv needed.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/klerk"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
